--- a/main.css
+++ b/main.css
@@ -343,7 +343,7 @@ body {
 .question {
     padding: 24px;
     border-radius: 8px;
-    background-color: rgba(60,61,167,0.2);
+    background-color: #eaeaea;
     margin-bottom: 12px;
     border: 1px solid #000;
     position: relative;
