--- a/main.css
+++ b/main.css
@@ -1,63 +1,3 @@
-.footer-container {
-    box-shadow: none;
-    border-top: 1px solid gray;
-    background-color: #fff;
-    padding: 0
-}
-
-.footer-content {
-    align-items: center;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    max-width: 600px !important
-}
-
-.footericon {
-    height: 25px
-}
-
-.navbar {
-    box-shadow: none;
-    border-bottom: 1px solid gray;
-    background-color: #fff;
-    opacity: 1;
-    padding-top: 3px;
-    padding-bottom: 3px
-}
-
-.navbar-nav {
-    width: 100%
-}
-
-.navbar-brand {
-    margin: 0;
-    padding: 0
-}
-
-.headericon {
-    height: 30px
-}
-
-.nav-item {
-    display: flex;
-    align-items: center
-}
-
-.nav-link {
-    font-size: 18px;
-    font-weight: 700;
-    color: #3C3DA7
-}
-
-.nav-link:hover {
-    color: #376cdd
-}
-
-.currentPage {
-    font-weight: 900;
-    color: #2c2f7c
-}
-
 .base-style {
     font-weight: 400;
     padding-top: 8px;
@@ -106,13 +46,6 @@
     outline: none;
     box-shadow: 0 0 5px #376cdd;
     border: 2px solid #376cdd
-}
-
-#map {
-    width: 100%;
-    height: 500px;
-    margin-top: 30px;
-    margin-bottom: 30px
 }
 
 .ol-popup {
@@ -189,107 +122,6 @@ body {
     max-width: 1000px
 }
 
-.details-name {
-    margin-bottom: 25px
-}
-
-.details-info {
-    display: flex;
-    justify-content: space-between
-}
-
-.info-type {
-    font-weight: bold;
-    font-size: 1.1rem;
-    margin-right: 1rem;
-    color: #3C3DA7;
-    display: inline-block
-}
-
-.info-type-content {
-    font-size: 1.1rem;
-    display: inline-block
-}
-
-.info-content-container {
-    margin-right: 25px
-}
-
-.details-map {
-    margin: 0 !important;
-    min-width: 256px !important;
-    width: 256px !important;
-    height: 256px !important
-}
-
-.hr-details {
-    border: none;
-    height: 2px;
-    background-color: #3C3DA7;
-    opacity: 0.8;
-    width: 100%;
-    margin-top: 3px
-}
-
-.details-dataset {
-    font-weight: bold;
-    font-size: 1.1rem;
-    display: inline-block;
-    margin-top: 10px
-}
-
-.searchInterfaceContainer {
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 30px
-}
-
-.searchTextInputInterface {
-    width: 100%
-}
-
-.searchResultsContainer {
-    width: 400px
-}
-
-.searchContentContainer {
-    display: flex;
-    justify-content: space-between
-}
-
-.searchResult {
-    margin-bottom: 15px;
-    list-style-type: none;
-    border: 1px solid gray
-}
-
-.resultName {
-    color: #3C3DA7;
-    font-weight: 600;
-    font-size: 1.15rem;
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px
-}
-
-.resultInfo {
-    padding-left: 10%;
-    padding-right: 10%;
-    font-size: 0.9rem
-}
-
-.resultButton {
-    margin-top: 15px;
-    margin-bottom: 10px;
-    text-align: center
-}
-
-.search-map {
-    margin: 0 !important;
-    max-width: 500px !important;
-    max-height: 500px !important
-}
-
 .progress-bar-container {
     display: flex;
     justify-content: space-between;
@@ -338,8 +170,6 @@ body {
     padding: 12px;
 }
 
-
-
 .question {
     padding: 24px;
     border-radius: 8px;
@@ -364,10 +194,10 @@ textarea {
 }
 
 .question-mark {
-    margin-left: 5px; /* Adjust the spacing between the question and the question mark */
-    cursor: help; /* Change cursor to a question mark on hover */
-    font-size: 16px; /* Adjust the font size of the question mark */
-    color: #000000; /* Set the color of the question mark to match your design */
+    margin-left: 5px;
+    cursor: help;
+    font-size: 16px;
+    color: #000000;
 }
 
 .deleteButton {
