Added upload functionality, currently only on localhost

--- a/main.css
+++ b/main.css
@@ -215,3 +215,10 @@ textarea {
     padding-top: 12px;
     border-top: 1px solid gray;
 }
+
+.upload-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
