--- a/main.css
+++ b/main.css
@@ -159,6 +159,7 @@ body {
     margin: auto;
     width: 60%;
     min-width: 400px;
+    position: relative;
 }
 
 .form-group {
@@ -221,4 +222,45 @@ textarea {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.invalid {
+    border: 1px solid red;
+}
+
+.error {
+    background-color: rgb(247, 230, 230);
+    border-radius: 3px;
+    color: rgb(255, 255, 255);
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    min-height: 28px;
+    outline: 0px;
+    padding: 5px;
+}
+
+.error-message {
+    margin: 0px;
+    max-width: 100%;
+    width: inherit;
+    font-weight: unset;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgb(175, 4, 4);
+    font-family: sans-serif;
+}
+
+
+.clear-button-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 15px;
+    z-index: 999;
+}
+
+.clear-button-container button {
+    float: none;
+    display: inline-block; 
 }
